--- a/template/default/css/main.position.css
+++ b/template/default/css/main.position.css
@@ -18,7 +18,8 @@ body, html {
 	min-height: 100%;
 	height:auto !important;
 	height: 100%;
-	position:relative; 
+	position:relative;
+	overflow: auto;
 }
 
 #header {
@@ -92,5 +93,6 @@ body, html {
 	left:0;
 	right:0;
 	text-align: right;
+	margin-top: 10px;
 	padding-right: 10px;
 }
