ScoutNet Kalender Plugin (Ausgabe) (ACP in Dev.); SQL Backup

--- a/lib/extension/impeesaNews/template/css/news.img.css
+++ b/lib/extension/impeesaNews/template/css/news.img.css
@@ -8,6 +8,6 @@
 
 .newsBox
 {
-	background-image: url("/resource/template-default-img-boxContent.png");
+	background-image: url("%IMPEESA_MAIN_LINK%resource/template-default-img-boxContent.png");
 	background-repeat: repeat-x;
 }
