--- a/template/default/css/main.else.css
+++ b/template/default/css/main.else.css
@@ -43,3 +43,9 @@ table {
 	padding-top: 5px;
 	padding-bottom: 2px;
 }
+
+.gradient
+{
+	border: 1px solid #e3e3e3;
+	-moz-border-radius:0 0 10px 10px;
+}	
