--- a/template/default/css/main.img.css
+++ b/template/default/css/main.img.css
@@ -29,8 +29,14 @@
 	background-repeat: repeat-x;
 }
 
-.gradient
+.gradient, fieldset
 {
 	background-image: url("%IMPEESA_MAIN_LINK%resource/template-default-img-boxContent.png");
+	background-repeat: repeat-x;
+}
+
+legend
+{
+	background-image: url("%IMPEESA_MAIN_LINK%resource/template-default-img-news_back.png");
 	background-repeat: repeat-x;
 }
