--- a/template/default/css/main.else.css
+++ b/template/default/css/main.else.css
@@ -76,3 +76,29 @@ table {
 	border: 1px solid #e3e3e3;
 	-moz-border-radius:0 0 10px 10px;
 }
+
+#submenu
+{
+	list-style: none;
+	border: 1px solid #003264;
+		-moz-border-radius: 10px;
+	background-color: #003264;
+	background-image: url("%IMPEESA_MAIN_LINK%resource/template-default-img-infoBg.png");
+	background-repeat: repeat-x;
+	color: #FFFFFF;
+}
+
+#submenu li
+{
+	display: inline;
+	padding: 10px;
+	border: 0px;
+	border-right: 2px;
+	border-style: solid;
+	border-color: #990000;
+}
+
+#submenu li a:visited, #submenu a, #submenu a:hover
+{
+	color: #FFFFFF;
+}
